README update
Take account of the removed proxy/ directory
First launch commands